Unit test for source folder patch.