@@ -61,6 +61,7 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.CountDownLatch;
+import java.util.function.BiFunction;
 import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.jar.JarOutputStream;
@@ -72,6 +73,8 @@ import org.netbeans.api.annotations.common.CheckForNull;
 import org.netbeans.api.annotations.common.NonNull;
 import org.netbeans.api.annotations.common.NullAllowed;
 import org.netbeans.api.java.classpath.ClassPath;
+import org.netbeans.api.java.classpath.JavaClassPathConstants;
+import org.netbeans.api.java.queries.BinaryForSourceQuery;
 import org.netbeans.api.java.source.ClasspathInfo;
 import org.netbeans.api.java.source.JavaSource;
 import org.netbeans.api.java.source.SourceUtils;
@@ -80,12 +83,13 @@ import org.netbeans.api.project.Project;
 import org.netbeans.api.project.ProjectManager;
 import org.netbeans.api.queries.FileEncodingQuery;
 import org.netbeans.junit.NbTestCase;
-import org.netbeans.modules.java.api.common.SourceRoots;
 import org.netbeans.modules.java.api.common.TestJavaPlatform;
 import org.netbeans.modules.java.api.common.TestProject;
 import org.netbeans.modules.java.api.common.project.ProjectProperties;
 import org.netbeans.modules.java.j2seplatform.platformdefinition.Util;
+import org.netbeans.modules.parsing.api.indexing.IndexingManager;
 import org.netbeans.spi.java.classpath.ClassPathFactory;
+import org.netbeans.spi.java.classpath.ClassPathProvider;
 import org.netbeans.spi.java.queries.CompilerOptionsQueryImplementation;
 import org.netbeans.spi.project.support.ant.AntProjectHelper;
 import org.netbeans.spi.project.support.ant.EditableProperties;
@@ -119,6 +123,7 @@ public class ModuleClassPathsTest extends NbTestCase {
     private ClassPath systemModules;
     private FileObject automaticModuleRoot;
     private FileObject jarFileRoot;
+    private TestProject tp;
     
     public ModuleClassPathsTest(@NonNull final String name) {
         super(name);
@@ -129,7 +134,7 @@ public class ModuleClassPathsTest extends NbTestCase {
         super.setUp();
         clearWorkDir();
         final FileObject workDir = FileUtil.toFileObject(FileUtil.normalizeFile(getWorkDir()));
-        MockLookup.setInstances(TestProject.createProjectType(), new MockCompilerOptions());
+        MockLookup.setInstances(TestProject.createProjectType(), new MockCompilerOptions(), new MockClassPathProvider());
         final FileObject prjDir = FileUtil.createFolder(workDir, "TestProject");    //NOI18N
         assertNotNull(prjDir);
         final FileObject srcDir = FileUtil.createFolder(prjDir, "src");    //NOI18N
@@ -137,7 +142,7 @@ public class ModuleClassPathsTest extends NbTestCase {
         final Project prj = TestProject.createProject(prjDir, srcDir, null);
         assertNotNull(prj);
         setSourceLevel(prj, "9");   //NOI18N
-        final TestProject tp = prj.getLookup().lookup(TestProject.class);
+        tp = prj.getLookup().lookup(TestProject.class);
         assertNotNull(tp);
         src = ClassPathFactory.createClassPath(ClassPathSupportFactory.createSourcePathImplementation (
                             tp.getSourceRoots(),
@@ -493,7 +498,45 @@ public class ModuleClassPathsTest extends NbTestCase {
                 compact1Patch1);  
         assertEquals(expectedURLs, resURLs);
     }
-    
+
+    public void testPatchModuleWithSourcePatch_SysModules() throws Exception {
+        if (systemModules == null) {
+            System.out.println("No jdk 9 home configured.");    //NOI18N
+            return;
+        }
+        assertNotNull(tp);
+        assertNotNull(src);
+        createModuleInfo(src, "Modle", "java.logging"); //NOI18N
+        final FileObject tests = tp.getProjectDirectory().createFolder("tests");
+        final ClassPath testSourcePath = org.netbeans.spi.java.classpath.support.ClassPathSupport.createClassPath(tests);
+        final ClassPath userModules = org.netbeans.spi.java.classpath.support.ClassPathSupport.createClassPath(BinaryForSourceQuery.findBinaryRoots(src.entries().get(0).getURL()).getRoots()[1]);
+        MockCompilerOptions.getInstance().forRoot(tests)
+                .apply("--patch-module")    //NOI18N
+                .apply(String.format("Modle=%s", FileUtil.toFile(tests).getAbsolutePath())) //NOI18N
+                .apply("--add-modules") //NOI18N
+                .apply("Modle") //NOI18N
+                .apply("--add-reads")   //NOI18N
+                .apply("Modle=ALL-UNNAMED"); //NOI18N
+        for (ClassPath.Entry e : src.entries()) {
+            MockClassPathProvider.getInstance().forRoot(e.getRoot())
+                    .apply(JavaClassPathConstants.MODULE_BOOT_PATH, systemModules)
+                    .apply(ClassPath.BOOT, systemModules);
+            IndexingManager.getDefault().refreshIndexAndWait(e.getURL(), null, true);
+        }
+        final ClassPath cp = ClassPathFactory.createClassPath(ModuleClassPaths.createModuleInfoBasedPath(
+                systemModules,
+                testSourcePath,
+                systemModules,
+                userModules,
+                ClassPath.EMPTY,
+                null));
+        final Collection<URL> resURLs = collectEntries(cp);
+        final Collection<URL> expectedURLs = reads(
+                systemModules,
+                NamePredicate.create("java.logging"));   //NOI18N
+        assertEquals(expectedURLs, resURLs);
+    }
+
     private static void setSourceLevel(
             @NonNull final Project prj,
             @NonNull final String sourceLevel) throws IOException {
@@ -544,7 +587,7 @@ public class ModuleClassPathsTest extends NbTestCase {
         });
         return res[0];
     }
-    
+
     private FileObject createPatchFolder(final String name) throws IOException {
         return FileUtil.createFolder(FileUtil.normalizeFile(
                 new File(getWorkDir(),name)));
@@ -770,5 +813,41 @@ public class ModuleClassPathsTest extends NbTestCase {
             public void removeChangeListener(ChangeListener listener) {
             }            
         }        
+    }
+
+    private static final class MockClassPathProvider implements ClassPathProvider {
+        private final Map<FileObject,Map<String,ClassPath>> cps;
+        MockClassPathProvider() {
+            cps = new HashMap<>();
+        }
+
+        <T extends BiFunction<String,ClassPath,T>> T forRoot(@NonNull final FileObject root) {
+            final Map<String,ClassPath> entry = new HashMap<>();
+            cps.put(root, entry);
+            final BiFunction<String,ClassPath,T> res = new BiFunction<String,ClassPath,T>() {
+                @Override
+                public T apply(String id, ClassPath cp) {
+                    entry.put(id, cp);
+                    return (T) this;
+                }
+            };
+            return (T) res;
+        }
+
+        @CheckForNull
+        @Override
+        public ClassPath findClassPath(FileObject file, String type) {
+            for (Map.Entry<FileObject,Map<String,ClassPath>> e : cps.entrySet()) {
+                if (e.getKey().equals(file) || FileUtil.isParentOf(e.getKey(), file)) {
+                    return e.getValue().get(type);
+                }
+            }
+            return null;
+        }
+
+        @CheckForNull
+        static MockClassPathProvider getInstance() {
+            return Lookup.getDefault().lookup(MockClassPathProvider.class);
+        }
     }
 }
